Changelog for plone.i18n

    (name of developer listed in brackets)

plone.i18n - 1.0.5 Unreleased

    - Added '`' to the list of dangerous chars, which will be removed by the
      url and be replaced with a dash by the file name normalizer now.
      [hannosch, mj]

plone.i18n - 1.0.4 Released April 19, 2008

    - If a dot was used in a url, the url was not lowercased. This closes
      http://dev.plone.org/plone/ticket/7961.
      [hannosch]

plone.i18n - 1.0.3 Released February 13, 2008

    - Updating the flag/language listings. Updating readme to include the flag
      mapping logic. This closes http://dev.plone.org/plone/ticket/7441.
      [limi]

    - Adding all the Arabic-speaking countries with their respective flags, and
      adding a generic flag to represent Arabic in general (verified to be OK with
      two independent, native residents).
      [limi]

    - Added tests for the filename and url request adapters. We have now 100%
      test coverage.
      [hannosch]

    - Wrote tests for the locale-aware id normalizer and fixed a bug in it.
      [hannosch]

    - Added more tests.
      [hannosch]

    - Removed unused and untested 'native' from country information.
      [hannosch]

    - Don't allow double quotes in normalized urls.
      This closes http://dev.plone.org/archetypes/ticket/764.
      [hannosch]

plone.i18n - 1.0.2 Released November 24, 2007

    - Remove those [] brackets from file names as well.
      [hannosch]

    - Increase the maximum filename size to 1023 and make it independently
      configurable.
      [hannosch]

plone.i18n - 1.0.1 Released October 7, 2007

    - Extend polish normalizer 'Ł' to L. This closes
      http://dev.plone.org/plone/ticket/6845.
      [hannosch]

    - Added test for filename with non-ascii character and extension. Fixes
      http://dev.plone.org/plone/ticket/7128.
      [dreamcatcher]

plone.i18n - 1.0 Released August 13, 2007
